--- a/index.html
+++ b/index.html
@@ -3,5 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Comenzando con la Fotografía!!!</title>
-    
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/estilos.css">
   </head>
+  <body>
+    <h1>fotografia</h1>
+    <p>estos es una pueba</p>
+  </body>
