comenzando a crear el encabezado, creado div

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
-    <h1>fotografia</h1>
-    <p>estos es una pueba</p>
+<div class="contenido">
+  <div class="cabecera">
+    <h1>Comenzando con la fotografía</h1>
+  </div>
+</div>
   </body>
