ordenando la cabecera

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
-<div class="contenido">
-  <div class="cabecera">
-    <h1>Comenzando con la fotografía</h1>
-  </div>
-</div>
+    <div class="contenido">
+      <div class="cabecera">
+        <h1>Comenzando con la fotografía</h1>
+          <div class="menu-pricipal">
+            <a href="/index.html">Inicio</a>
+            <a href="#">Paisajes</a>
+            <a href="#">Retratos</a>
+          </div>
+      </div>
+    </div>
   </body>
