terminando la cabecera

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="contenido">
       <div class="cabecera">
         <h1>Comenzando con la fotografía</h1>
-          <div class="menu-pricipal">
+          <div id="menu-pricipal">
             <a href="/index.html">Inicio</a>
             <a href="#">Paisajes</a>
             <a href="#">Retratos</a>
