terminada la imagen centra - comenzando con imagenes secundarias

--- a/retratos.html
+++ b/retratos.html
@@ -13,23 +13,12 @@
           <h1>Comenzando con la Fotografía</h1>
 
             <div id="menu-pricipal">
-              <a class="activa" href="index.html">Inicio</a>
+              <a href="index.html">Inicio</a>
               <a href="paisajes.html">Paisajes</a>
-              <a href="retratos.html">Retratos</a>
+              <a class="activa" href="retratos.html">Retratos</a>
             </div>
 
         </div>
 
     </header>
-    <div class="contenido">
-
-      <section id="central">
-        <img src="imagenes/foto1.jpg">
-      </section>
-      <section id="secundaria">
-        <img id="izquierda" src="imagenes/foto4.jpg">
-        <img id="derecha" src="imagenes/foto2.jpg">
-      </section>
-
-    </div>
   </body>
