cambie el tamaño de las imagenes inferiores, y modifique el codigo, comenzando con los efectos hover

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
       </section>
       <section id="secundaria">
         <img id="izquierda" src="imagenes/foto4.jpg">
+        <figcaption><a href="paisajes.html">Paisajes</a></figcaption>
         <img id="derecha" src="imagenes/foto2.jpg">
+        <figcaption><a href="retratos.html">Retratos</a></figcaption>
       </section>
 
     </div>
