saque los id que haba creado por class, y ahora estoy dandole efecto a las imagenes secundarias

--- a/index.html
+++ b/index.html
@@ -26,11 +26,18 @@
       <section id="central">
         <img src="imagenes/foto1.jpg">
       </section>
-      <section id="secundaria">
-        <img id="izquierda" src="imagenes/foto4.jpg">
-        <figcaption><a href="paisajes.html">Paisajes</a></figcaption>
-        <img id="derecha" src="imagenes/foto2.jpg">
-        <figcaption><a href="retratos.html">Retratos</a></figcaption>
+      <section class="secundaria">
+        
+        <div class="izquierda">
+          <img src="imagenes/foto4.jpg">
+          <a href="paisajes.html">Paisajes</a>
+
+        </div>
+        <div class="derecha">
+          <img src="imagenes/foto2.jpg">
+          <a href="retratos.html">Retratos</a>
+
+        </div>
       </section>
 
     </div>
