comenzando el footer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img src="imagenes/foto1.jpg">
       </section>
       <section class="secundaria">
-        
+
         <div class="izquierda">
           <img src="imagenes/foto4.jpg">
           <a href="paisajes.html">Paisajes</a>
@@ -41,4 +41,17 @@
       </section>
 
     </div>
+    <footer class="contenido">
+      <section class="pie">
+
+        <section id="contacto">
+          <p id="titulo"><strong>Contacto</strong></p>
+
+          <p>fedezabala014@gmail.com</p>
+          <p>M. de Alvear 207 - Villa Ramallo</p>
+          <p>Cel: 3407 440856</p>
+        </section>
+
+      </section>
+    </footer>
   </body>
