terminando el footer, carge imagenes png para los iconos de redes

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 
         <div class="izquierda">
           <img src="imagenes/foto4.jpg">
-          <a href="paisajes.html">Paisajes</a>
+          <a id="link" href="paisajes.html">Paisajes</a>
 
         </div>
         <div class="derecha">
           <img src="imagenes/foto2.jpg">
-          <a href="retratos.html">Retratos</a>
+          <a id="link" href="retratos.html">Retratos</a>
 
         </div>
       </section>
@@ -47,9 +47,23 @@
         <section id="contacto">
           <p id="titulo"><strong>Contacto</strong></p>
 
-          <p>fedezabala014@gmail.com</p>
+          <p><a id="link" href="mailto:fedezabala014@gmail.com">Nuestro mail</a></p>
           <p>M. de Alvear 207 - Villa Ramallo</p>
           <p>Cel: 3407 440856</p>
+        </section>
+        <section id="terminos">
+          <p id="titulo"><strong>Terminos</strong></p>
+
+          <p>Términos y condiciones generales mas adelante, ahora no.</p>
+        </section>
+        <section id="redes">
+          <p id="titulo"><strong>Redes Sociales</strong></p>
+
+          <p><img class="logos" src="imagenes/face.png">Fede Zabala</p>
+          <p><img class="logos" src="imagenes/insta.png">Fede#990</p>
+          <p><img class="logos" src="imagenes/twiter.png">@fedezabala</p>
+
+
         </section>
 
       </section>
