terminado el footer, faltan los detalles

--- a/index.html
+++ b/index.html
@@ -59,10 +59,15 @@
         <section id="redes">
           <p id="titulo"><strong>Redes Sociales</strong></p>
 
-          <p><img class="logos" src="imagenes/face.png">Fede Zabala</p>
-          <p><img class="logos" src="imagenes/insta.png">Fede#990</p>
-          <p><img class="logos" src="imagenes/twiter.png">@fedezabala</p>
+          <p><img class="logos" src="imagenes/facebook.png"> Fede Zabala</p>
+          <p><img class="logos" src="imagenes/insta.png"> Fede#990</p>
+          <p><img class="logos" src="imagenes/twiter.png"> @fedezabala</p>
+        </section>
+        <section id="derechos">
+          <p id="titulo"><strong>Derechos</strong></p>
 
+          <p>Federico Zabala</p>
+          <p>© CopyRight | 2019</p>
 
         </section>
 
