--- a/retratos.html
+++ b/retratos.html
@@ -21,4 +21,36 @@
         </div>
 
     </header>
+    <footer class="contenido">
+      <section class="pie">
+
+        <section id="contacto">
+          <p id="titulo"><strong>Contacto</strong></p>
+
+          <p><a id="link" href="mailto:fedezabala014@gmail.com">Nuestro mail</a></p>
+          <p>M. de Alvear 207 - Villa Ramallo</p>
+          <p>Cel: 3407 440856</p>
+        </section>
+        <section id="terminos">
+          <p id="titulo"><strong>Terminos</strong></p>
+
+          <p>Términos y condiciones generales mas adelante, ahora no.</p>
+        </section>
+        <section id="redes">
+          <p id="titulo"><strong>Redes Sociales</strong></p>
+
+          <p><img class="logos" src="imagenes/facebook.png"> Fede Zabala</p>
+          <p><img class="logos" src="imagenes/insta.png"> Fede#990</p>
+          <p><img class="logos" src="imagenes/twiter.png"> @fedezabala</p>
+        </section>
+        <section id="derechos">
+          <p id="titulo"><strong>Derechos</strong></p>
+
+          <p>Federico Zabala</p>
+          <p>© CopyRight | 2019</p>
+
+        </section>
+
+      </section>
+    </footer>
   </body>
